Add support for RU localization